--- a/log_in_stylesheet.css
+++ b/log_in_stylesheet.css
@@ -12,6 +12,7 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
+    overflow-y: scroll;
 }
 html, body {
     height: 100%;
@@ -22,7 +23,8 @@ html, body {
     display: grid;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     --web-view-name: Log-in Page;
     --web-view-id: Log-in_Page;
     --web-scale-on-resize: true;
