--- a/new_game_stylesheet.css
+++ b/new_game_stylesheet.css
@@ -1,154 +1,85 @@
+* {
+  font-family: Roboto;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  overflow-y: scroll;
+}
+
+header {
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #7C98B3;
+  padding: 20px 40px;
+}
+
+#Header {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.Header_Link {
+  text-decoration: none;
+  color: inherit;
+  color: #fff;
+  background-color: #ACCBE1;
+  padding: 7px 25px;
+  border: 0.2px solid #fff;
+  border-radius: 10px;
+}
+
 #New_Game_Page {
-  position: absolute;
-  width: 1920px;
-  height: 1080px;
-  background-color: rgba(255, 255, 255, 1);
-  overflow: hidden;
+  background-color: #fff;
+  overflow-x: hidden;
+  overflow-y: auto;
   --web-view-name: New Game Page;
   --web-view-id: New_Game_Page;
   --web-scale-on-resize: true;
   --web-enable-deep-linking: true;
 }
 
-#Header {
-  fill: rgba(124, 152, 179, 1);
-  stroke: rgba(112, 112, 112, 1);
-  stroke-width: 1px;
-  stroke-linejoin: miter;
-  stroke-linecap: butt;
-  stroke-miterlimit: 4;
-  shape-rendering: auto;
-}
-.Header {
-  position: absolute;
-  overflow: visible;
-  width: 1920px;
-  height: 165px;
-  left: 0px;
-  top: 0px;
-}
-#Game_Title {
-  left: 894px;
-  top: 56px;
-  position: absolute;
-  overflow: visible;
-  width: 175px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 40px;
-  color: rgba(255, 255, 255, 1);
-}
-#Hangman_Img {
-  position: absolute;
-  width: 56px;
-  height: 56px;
-  left: 811px;
-  top: 55px;
-  overflow: visible;
-}
-#Account_Settings_Button {
-  position: absolute;
-  width: 237px;
-  height: 53px;
-  left: 1613px;
-  top: 56px;
-  overflow: visible;
-}
-#Account_Settings_Background {
-  fill: rgba(172, 203, 225, 1);
-  stroke: rgba(255, 255, 255, 1);
-  stroke-width: 1px;
-  stroke-linejoin: miter;
-  stroke-linecap: butt;
-  stroke-miterlimit: 4;
-  shape-rendering: auto;
-}
-.Account_Settings_Background {
-  position: absolute;
-  overflow: visible;
-  width: 237px;
-  height: 53px;
-  left: 0px;
-  top: 0px;
-}
-#Account_Settings {
-  left: 24px;
-  top: 11px;
-  position: absolute;
-  overflow: visible;
-  width: 186px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  color: rgba(255, 255, 255, 1);
-}
-#New_Game_Button {
-  position: absolute;
-  width: 230px;
-  height: 53px;
-  left: 70px;
-  top: 56px;
-  overflow: visible;
-}
-#New_Game_Background {
-  fill: rgba(172, 203, 225, 1);
-  stroke: rgba(255, 255, 255, 1);
-  stroke-width: 1px;
-  stroke-linejoin: miter;
-  stroke-linecap: butt;
-  stroke-miterlimit: 4;
-  shape-rendering: auto;
-}
-.New_Game_Background {
-  position: absolute;
-  overflow: visible;
-  width: 230px;
-  height: 53px;
-  left: 0px;
-  top: 0px;
-}
-#New_Game {
-  left: 57px;
-  top: 11px;
-  position: absolute;
-  overflow: visible;
-  width: 117px;
-  white-space: nowrap;
-  text-align: center;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  color: rgba(255, 255, 255, 1);
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-#Page_Title {
-  left: 852px;
-  top: 280px;
-  position: absolute;
-  overflow: visible;
-  width: 218px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 50px;
-  color: rgba(124, 152, 179, 1);
+#New_Game {
+
 }
-#hangman {
-  position: absolute;
-  width: 98px;
-  height: 98px;
-  left: 930px;
-  top: 420px;
-  overflow: visible;
+
+#New_Game_Header {
+  font-size: xx-large;
+  color: #7C98B3;
+  margin: 7% 0;
+}
+
+#New_Game_Hangman_Img {
+  height: 100px;
+  width: 80px;
+  margin-bottom: 7%;
+}
+
+#Play_Button {
+  cursor: pointer;
+  color: #fff;
+  background-color: #ACCBE1;
+  font-weight: bold;
+  font-size: large;
+  border: 1px solid #707070;
+  border-radius: 10px;
+  height: 53px;
+  padding: 10px;
+  margin-top: 3px;
+  width: 333px;
+  margin: 5% 0;
 }
 
 .dropdown_button {
@@ -164,14 +95,15 @@
   width: 333px;
   height: 53px;
   font-family: Roboto;
+  margin: 3% 0;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
+  /* position: relative; */
   display: inline-block;
-  left: 810px;
-  top: 610px;
+  /* left: 810px;
+  top: 610px; */
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -206,60 +138,12 @@
   display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
-/* .Difficulty_Dropdown:hover .Difficulty_Button {
-  background-color: ;
-} */
-#Play_Button {
-  position: absolute;
-  width: 333px;
-  height: 53px;
-  left: 820px;
-  top: 860px;
-  overflow: visible;
-  --web-animation: fadein 0.3s ease-out;
-  --web-action-type: page;
-  --web-action-target: Main_Game_Page.html;
-  cursor: pointer;
-}
-#Play_Background {
-  fill: rgba(172, 203, 225, 1);
-  stroke: rgba(255, 255, 255, 1);
-  stroke-width: 1px;
-  stroke-linejoin: miter;
-  stroke-linecap: butt;
-  stroke-miterlimit: 4;
-  shape-rendering: auto;
-}
-.Play_Background {
-  position: absolute;
-  overflow: visible;
-  width: 333px;
-  height: 53px;
-  left: 0px;
-  top: 0px;
-}
-#Play_Text {
-  left: 143px;
-  top: 11px;
-  position: absolute;
-  overflow: visible;
-  width: 48px;
-  white-space: nowrap;
-  text-align: left;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  color: rgba(255, 255, 255, 1);
-}
-
 /* The container <div> - needed to position the dropdown content */
 .category_dropdown {
-  position: relative;
+  /* position: relative; */
   display: inline-block;
-  left: 810px;
-  top: 650px;
+  /* left: 810px;
+  top: 650px; */
 }
 
 /* Show the dropdown menu on hover */
