--- a/main_page_stylesheet.css
+++ b/main_page_stylesheet.css
@@ -1,3 +1,39 @@
+* {
+    font-family: Roboto;
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    overflow-y: scroll;
+  }
+  
+  header {
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #7C98B3;
+    padding: 20px 40px;
+  }
+  
+  #Header {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .Header_Link {
+    text-decoration: none;
+    color: inherit;
+    color: #fff;
+    background-color: #ACCBE1;
+    padding: 7px 25px;
+    border: 0.2px solid #fff;
+    border-radius: 10px;
+  }
+  
 .text-center{
     text-align: center;
 }
